fixed button issue with jump runner

--- a/jumping-runner/style.css
+++ b/jumping-runner/style.css
@@ -54,7 +54,7 @@ h1 {
 #start {
 	padding: 5px;
 	z-index: 3;
-	display: none;
+	display: flex;
 	position: relative;
 	top: 100px;
 }
